[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/BuzzIntro.gd" type="Script" id=1]
[ext_resource path="res://sprites/buzzflyin.png" type="Texture2D" id=2]
[ext_resource path="res://fonts/NES.tres" type="FontFile" id=3]
[ext_resource path="res://music/BuzzBossFightIntro.wav" type="AudioStream" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="BuzzIntro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -4.35675
offset_top = -5.61237
offset_right = 1303.64
offset_bottom = 728.388
color = Color( 0.164706, 0.164706, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stripe1" type="ColorRect" parent="."]
offset_left = -75.0
offset_top = -1012.0
offset_right = 1250.0
offset_bottom = -946.0
rotation = 45.0
color = Color( 0.964706, 0.968627, 0.266667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stripe2" type="ColorRect" parent="."]
offset_left = 201.965
offset_top = -138.862
offset_right = 1529.96
offset_bottom = -72.8618
rotation = 45.0
color = Color( 0.964706, 0.968627, 0.266667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stripe3" type="ColorRect" parent="."]
offset_left = -199.672
offset_top = 44.9859
offset_right = 1128.33
offset_bottom = 110.986
rotation = 45.0
color = Color( 0.964706, 0.968627, 0.266667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Buzz" type="Sprite2D" parent="."]
position = Vector2( 1696.82, 362.304 )
scale = Vector2( 0.503377, 0.503377 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
offset_left = 22.3482
offset_top = 619.497
offset_right = 244.348
offset_bottom = 698.497
theme_override_styles/hover = SubResource( 1 )
theme_override_styles/pressed = SubResource( 2 )
theme_override_styles/normal = SubResource( 3 )
theme_override_fonts/font = ExtResource( 3 )
text = "Let's Go"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -4.0
autoplay = true
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
